[gd_scene load_steps=19 format=2]

[ext_resource path="res://Gamepads/Xbox/Xbox_Gamepad.png" type="Texture" id=1]
[ext_resource path="res://Gamepads/Xbox/Keys/Button_Y.png" type="Texture" id=2]
[ext_resource path="res://Gamepads/Xbox/Keys/Button_A.png" type="Texture" id=3]
[ext_resource path="res://Gamepads/Xbox/Keys/Button_B.png" type="Texture" id=4]
[ext_resource path="res://Gamepads/Xbox/Keys/Button_X.png" type="Texture" id=5]
[ext_resource path="res://Gamepads/Xbox/Keys/Dpad_Left.png" type="Texture" id=6]
[ext_resource path="res://Gamepads/Xbox/Keys/Dpad_Down.png" type="Texture" id=7]
[ext_resource path="res://Gamepads/Xbox/Keys/Dpad_Right.png" type="Texture" id=8]
[ext_resource path="res://Gamepads/Xbox/Keys/Dpad_Up.png" type="Texture" id=9]
[ext_resource path="res://Gamepads/Xbox/Keys/Trigger_L1.png" type="Texture" id=10]
[ext_resource path="res://Gamepads/Xbox/Keys/Trigger_L2.png" type="Texture" id=11]
[ext_resource path="res://Gamepads/Xbox/Keys/Trigger_R1.png" type="Texture" id=12]
[ext_resource path="res://Gamepads/Xbox/Keys/Trigger_R2.png" type="Texture" id=13]
[ext_resource path="res://Gamepads/Xbox/Keys/Button_Start.png" type="Texture" id=14]
[ext_resource path="res://Gamepads/Xbox/Keys/Button_Select.png" type="Texture" id=15]
[ext_resource path="res://Gamepads/Xbox/Xbox_Gamepad.gd" type="Script" id=16]
[ext_resource path="res://Gamepads/Xbox/Keys/Axis_Right.png" type="Texture" id=17]
[ext_resource path="res://Gamepads/Xbox/Keys/Axis_Left.png" type="Texture" id=18]

[node name="Xbox_Gamepad" type="Node2D"]
script = ExtResource( 16 )

[node name="Gamepad" type="Sprite" parent="."]
position = Vector2( 256, 144 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="Axis_Left" type="Sprite" parent="Gamepad"]
position = Vector2( -44, -20.5 )
texture = ExtResource( 18 )

[node name="Axis_Right" type="Sprite" parent="Gamepad"]
position = Vector2( 20, 3.5 )
texture = ExtResource( 17 )

[node name="Dpad_Up" type="Sprite" parent="Gamepad"]
position = Vector2( -20, -2 )
texture = ExtResource( 9 )

[node name="Dpad_Down" type="Sprite" parent="Gamepad"]
position = Vector2( -20, 9 )
texture = ExtResource( 7 )

[node name="Dpad_Left" type="Sprite" parent="Gamepad"]
position = Vector2( -25.5, 3.5 )
texture = ExtResource( 6 )

[node name="Dpad_Right" type="Sprite" parent="Gamepad"]
position = Vector2( -14.5, 3.5 )
texture = ExtResource( 8 )

[node name="Button_A" type="Sprite" parent="Gamepad"]
position = Vector2( 44.5, -12.5 )
texture = ExtResource( 3 )

[node name="Button_B" type="Sprite" parent="Gamepad"]
position = Vector2( 52, -20.5 )
texture = ExtResource( 4 )

[node name="Button_X" type="Sprite" parent="Gamepad"]
position = Vector2( 36.5, -20.5 )
texture = ExtResource( 5 )

[node name="Button_Y" type="Sprite" parent="Gamepad"]
position = Vector2( 44, -28.5 )
texture = ExtResource( 2 )

[node name="Button_Select" type="Sprite" parent="Gamepad"]
position = Vector2( -10, -21.5 )
texture = ExtResource( 15 )

[node name="Button_Start" type="Sprite" parent="Gamepad"]
position = Vector2( 10, -21.5 )
texture = ExtResource( 14 )

[node name="Trigger_L1" type="Sprite" parent="Gamepad"]
position = Vector2( -36, -52 )
texture = ExtResource( 10 )

[node name="Trigger_L2" type="Sprite" parent="Gamepad"]
position = Vector2( -36, -62.5 )
texture = ExtResource( 11 )

[node name="Trigger_R1" type="Sprite" parent="Gamepad"]
position = Vector2( 36, -52 )
texture = ExtResource( 12 )

[node name="Trigger_R2" type="Sprite" parent="Gamepad"]
position = Vector2( 36, -62.5 )
texture = ExtResource( 13 )
